// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header DropDown should not render DropDown if state.pushDown is false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    className="ClassName"
    collapsed={undefined}
    headerContent={undefined}
    onDropDownButtonClick={[Function]}
    onDropDownTabClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
>
          <div
                    className="headerContent txt-overflow pl-4"
          />
          <div
                    className="dropdownIcons d-flex align-items-center justify-content-between"
                    onClick={[Function]}
          >
                    <DropDownIcon
                              iconText="Sort"
                              iconType="SORT"
                              onClick={[Function]}
                    />
          </div>
</div>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="headerContent txt-overflow pl-4"
/>,
            <div
              className="dropdownIcons d-flex align-items-center justify-content-between"
              onClick={[Function]}
>
              <DropDownIcon
                            iconText="Sort"
                            iconType="SORT"
                            onClick={[Function]}
              />
</div>,
          ],
          "className": "ClassName  header fixed full-width d-flex align-items-center justify-content-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "className": "headerContent txt-overflow pl-4",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <DropDownIcon
                iconText="Sort"
                iconType="SORT"
                onClick={[Function]}
/>,
              "className": "dropdownIcons d-flex align-items-center justify-content-between",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "iconText": "Sort",
                "iconType": "SORT",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
>
            <div
                        className="headerContent txt-overflow pl-4"
            />
            <div
                        className="dropdownIcons d-flex align-items-center justify-content-between"
                        onClick={[Function]}
            >
                        <DropDownIcon
                                    iconText="Sort"
                                    iconType="SORT"
                                    onClick={[Function]}
                        />
            </div>
</div>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="headerContent txt-overflow pl-4"
/>,
              <div
                className="dropdownIcons d-flex align-items-center justify-content-between"
                onClick={[Function]}
>
                <DropDownIcon
                                iconText="Sort"
                                iconType="SORT"
                                onClick={[Function]}
                />
</div>,
            ],
            "className": "ClassName  header fixed full-width d-flex align-items-center justify-content-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "headerContent txt-overflow pl-4",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <DropDownIcon
                  iconText="Sort"
                  iconType="SORT"
                  onClick={[Function]}
/>,
                "className": "dropdownIcons d-flex align-items-center justify-content-between",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "iconText": "Sort",
                  "iconType": "SORT",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header DropDown should render DropDown if state.pushDown is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    className="ClassName"
    collapsed={undefined}
    headerContent={undefined}
    onDropDownButtonClick={[Function]}
    onDropDownTabClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
>
          <div
                    className="headerContent txt-overflow pl-4"
          />
          <div
                    className="dropdownIcons d-flex align-items-center justify-content-between"
                    onClick={[Function]}
          >
                    <DropDownIcon
                              iconText="Sort"
                              iconType="SORT"
                              onClick={[Function]}
                    />
          </div>
</div>,
        <DropDown
          className="dropdown"
          onTabClick={[Function]}
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="headerContent txt-overflow pl-4"
/>,
            <div
              className="dropdownIcons d-flex align-items-center justify-content-between"
              onClick={[Function]}
>
              <DropDownIcon
                            iconText="Sort"
                            iconType="SORT"
                            onClick={[Function]}
              />
</div>,
          ],
          "className": "ClassName  header fixed full-width d-flex align-items-center justify-content-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "className": "headerContent txt-overflow pl-4",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <DropDownIcon
                iconText="Sort"
                iconType="SORT"
                onClick={[Function]}
/>,
              "className": "dropdownIcons d-flex align-items-center justify-content-between",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "iconText": "Sort",
                "iconType": "SORT",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "dropdown",
          "onTabClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
>
            <div
                        className="headerContent txt-overflow pl-4"
            />
            <div
                        className="dropdownIcons d-flex align-items-center justify-content-between"
                        onClick={[Function]}
            >
                        <DropDownIcon
                                    iconText="Sort"
                                    iconType="SORT"
                                    onClick={[Function]}
                        />
            </div>
</div>,
          <DropDown
            className="dropdown"
            onTabClick={[Function]}
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="headerContent txt-overflow pl-4"
/>,
              <div
                className="dropdownIcons d-flex align-items-center justify-content-between"
                onClick={[Function]}
>
                <DropDownIcon
                                iconText="Sort"
                                iconType="SORT"
                                onClick={[Function]}
                />
</div>,
            ],
            "className": "ClassName  header fixed full-width d-flex align-items-center justify-content-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "headerContent txt-overflow pl-4",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <DropDownIcon
                  iconText="Sort"
                  iconType="SORT"
                  onClick={[Function]}
/>,
                "className": "dropdownIcons d-flex align-items-center justify-content-between",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "iconText": "Sort",
                  "iconType": "SORT",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "dropdown",
            "onTabClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header should not render DropDown if clicked twice 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    className="ClassName"
    collapsed={undefined}
    headerContent={undefined}
    onDropDownButtonClick={[Function]}
    onDropDownTabClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
>
          <div
                    className="headerContent txt-overflow pl-4"
          />
          <div
                    className="dropdownIcons d-flex align-items-center justify-content-between"
                    onClick={[Function]}
          >
                    <DropDownIcon
                              iconText="Sort"
                              iconType="SORT"
                              onClick={[Function]}
                    />
          </div>
</div>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="headerContent txt-overflow pl-4"
/>,
            <div
              className="dropdownIcons d-flex align-items-center justify-content-between"
              onClick={[Function]}
>
              <DropDownIcon
                            iconText="Sort"
                            iconType="SORT"
                            onClick={[Function]}
              />
</div>,
          ],
          "className": "ClassName  header fixed full-width d-flex align-items-center justify-content-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "className": "headerContent txt-overflow pl-4",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <DropDownIcon
                iconText="Sort"
                iconType="SORT"
                onClick={[Function]}
/>,
              "className": "dropdownIcons d-flex align-items-center justify-content-between",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "iconText": "Sort",
                "iconType": "SORT",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
>
            <div
                        className="headerContent txt-overflow pl-4"
            />
            <div
                        className="dropdownIcons d-flex align-items-center justify-content-between"
                        onClick={[Function]}
            >
                        <DropDownIcon
                                    iconText="Sort"
                                    iconType="SORT"
                                    onClick={[Function]}
                        />
            </div>
</div>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="headerContent txt-overflow pl-4"
/>,
              <div
                className="dropdownIcons d-flex align-items-center justify-content-between"
                onClick={[Function]}
>
                <DropDownIcon
                                iconText="Sort"
                                iconType="SORT"
                                onClick={[Function]}
                />
</div>,
            ],
            "className": "ClassName  header fixed full-width d-flex align-items-center justify-content-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "headerContent txt-overflow pl-4",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <DropDownIcon
                  iconText="Sort"
                  iconType="SORT"
                  onClick={[Function]}
/>,
                "className": "dropdownIcons d-flex align-items-center justify-content-between",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "iconText": "Sort",
                  "iconType": "SORT",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header should not render DropDown if clicked twice 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    className="ClassName"
    collapsed={undefined}
    headerContent={undefined}
    onDropDownButtonClick={[Function]}
    onDropDownTabClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
>
          <div
                    className="headerContent txt-overflow pl-4"
          />
          <div
                    className="dropdownIcons d-flex align-items-center justify-content-between"
                    onClick={[Function]}
          >
                    <DropDownIcon
                              iconText="Sort"
                              iconType="SORT"
                              onClick={[Function]}
                    />
          </div>
</div>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="headerContent txt-overflow pl-4"
/>,
            <div
              className="dropdownIcons d-flex align-items-center justify-content-between"
              onClick={[Function]}
>
              <DropDownIcon
                            iconText="Sort"
                            iconType="SORT"
                            onClick={[Function]}
              />
</div>,
          ],
          "className": "ClassName  header fixed full-width d-flex align-items-center justify-content-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "className": "headerContent txt-overflow pl-4",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <DropDownIcon
                iconText="Sort"
                iconType="SORT"
                onClick={[Function]}
/>,
              "className": "dropdownIcons d-flex align-items-center justify-content-between",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "iconText": "Sort",
                "iconType": "SORT",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
>
            <div
                        className="headerContent txt-overflow pl-4"
            />
            <div
                        className="dropdownIcons d-flex align-items-center justify-content-between"
                        onClick={[Function]}
            >
                        <DropDownIcon
                                    iconText="Sort"
                                    iconType="SORT"
                                    onClick={[Function]}
                        />
            </div>
</div>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="headerContent txt-overflow pl-4"
/>,
              <div
                className="dropdownIcons d-flex align-items-center justify-content-between"
                onClick={[Function]}
>
                <DropDownIcon
                                iconText="Sort"
                                iconType="SORT"
                                onClick={[Function]}
                />
</div>,
            ],
            "className": "ClassName  header fixed full-width d-flex align-items-center justify-content-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "headerContent txt-overflow pl-4",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <DropDownIcon
                  iconText="Sort"
                  iconType="SORT"
                  onClick={[Function]}
/>,
                "className": "dropdownIcons d-flex align-items-center justify-content-between",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "iconText": "Sort",
                  "iconType": "SORT",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header should render 1`] = `
<div>
  <div
    className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
  >
    <div
      className="headerContent txt-overflow pl-4"
    />
    <div
      className="dropdownIcons d-flex align-items-center justify-content-between"
      onClick={[Function]}
    >
      <DropDownIcon
        iconText="Sort"
        iconType="SORT"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Header should render DropDown on click 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    className="ClassName"
    collapsed={undefined}
    headerContent={undefined}
    onDropDownButtonClick={[Function]}
    onDropDownTabClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
>
          <div
                    className="headerContent txt-overflow pl-4"
          />
          <div
                    className="dropdownIcons d-flex align-items-center justify-content-between"
                    onClick={[Function]}
          >
                    <DropDownIcon
                              iconText="Sort"
                              iconType="SORT"
                              onClick={[Function]}
                    />
          </div>
</div>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="headerContent txt-overflow pl-4"
/>,
            <div
              className="dropdownIcons d-flex align-items-center justify-content-between"
              onClick={[Function]}
>
              <DropDownIcon
                            iconText="Sort"
                            iconType="SORT"
                            onClick={[Function]}
              />
</div>,
          ],
          "className": "ClassName  header fixed full-width d-flex align-items-center justify-content-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "className": "headerContent txt-overflow pl-4",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <DropDownIcon
                iconText="Sort"
                iconType="SORT"
                onClick={[Function]}
/>,
              "className": "dropdownIcons d-flex align-items-center justify-content-between",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "iconText": "Sort",
                "iconType": "SORT",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
>
            <div
                        className="headerContent txt-overflow pl-4"
            />
            <div
                        className="dropdownIcons d-flex align-items-center justify-content-between"
                        onClick={[Function]}
            >
                        <DropDownIcon
                                    iconText="Sort"
                                    iconType="SORT"
                                    onClick={[Function]}
                        />
            </div>
</div>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="headerContent txt-overflow pl-4"
/>,
              <div
                className="dropdownIcons d-flex align-items-center justify-content-between"
                onClick={[Function]}
>
                <DropDownIcon
                                iconText="Sort"
                                iconType="SORT"
                                onClick={[Function]}
                />
</div>,
            ],
            "className": "ClassName  header fixed full-width d-flex align-items-center justify-content-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "headerContent txt-overflow pl-4",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <DropDownIcon
                  iconText="Sort"
                  iconType="SORT"
                  onClick={[Function]}
/>,
                "className": "dropdownIcons d-flex align-items-center justify-content-between",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "iconText": "Sort",
                  "iconType": "SORT",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header should render DropDown on click 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    className="ClassName"
    collapsed={undefined}
    headerContent={undefined}
    onDropDownButtonClick={[Function]}
    onDropDownTabClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
>
          <div
                    className="headerContent txt-overflow pl-4"
          />
          <div
                    className="dropdownIcons d-flex align-items-center justify-content-between"
                    onClick={[Function]}
          >
                    <DropDownIcon
                              iconText="Sort"
                              iconType="SORT"
                              onClick={[Function]}
                    />
          </div>
</div>,
        <DropDown
          className="dropdown"
          onTabClick={[Function]}
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="headerContent txt-overflow pl-4"
/>,
            <div
              className="dropdownIcons d-flex align-items-center justify-content-between"
              onClick={[Function]}
>
              <DropDownIcon
                            iconText="Sort"
                            iconType="SORT"
                            onClick={[Function]}
              />
</div>,
          ],
          "className": "ClassName  header fixed full-width d-flex align-items-center justify-content-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "className": "headerContent txt-overflow pl-4",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <DropDownIcon
                iconText="Sort"
                iconType="SORT"
                onClick={[Function]}
/>,
              "className": "dropdownIcons d-flex align-items-center justify-content-between",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "iconText": "Sort",
                "iconType": "SORT",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "dropdown",
          "onTabClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="ClassName  header fixed full-width d-flex align-items-center justify-content-between"
>
            <div
                        className="headerContent txt-overflow pl-4"
            />
            <div
                        className="dropdownIcons d-flex align-items-center justify-content-between"
                        onClick={[Function]}
            >
                        <DropDownIcon
                                    iconText="Sort"
                                    iconType="SORT"
                                    onClick={[Function]}
                        />
            </div>
</div>,
          <DropDown
            className="dropdown"
            onTabClick={[Function]}
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="headerContent txt-overflow pl-4"
/>,
              <div
                className="dropdownIcons d-flex align-items-center justify-content-between"
                onClick={[Function]}
>
                <DropDownIcon
                                iconText="Sort"
                                iconType="SORT"
                                onClick={[Function]}
                />
</div>,
            ],
            "className": "ClassName  header fixed full-width d-flex align-items-center justify-content-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "headerContent txt-overflow pl-4",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <DropDownIcon
                  iconText="Sort"
                  iconType="SORT"
                  onClick={[Function]}
/>,
                "className": "dropdownIcons d-flex align-items-center justify-content-between",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "iconText": "Sort",
                  "iconType": "SORT",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "dropdown",
            "onTabClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
